<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wangshen.library_login.ui.LoginActivity">
    <ImageView
        android:layout_marginTop="@dimen/dp_27"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_340" />
    <Button

        android:layout_marginTop="@dimen/dp_24"
        android:textSize="@dimen/sp_18"
        android:text="@string/login"
        android:background="@drawable/shape_login"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_270"
        android:layout_height="@dimen/dp_44" />
    <Button

        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_18"
        android:text="@string/register"
        android:background="@drawable/shape_register"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_270"
        android:layout_height="@dimen/dp_44" />
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_28"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/registe_walk"
            android:textSize="@dimen/sp_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="》"
            android:layout_marginLeft="@dimen/dp_9"
            android:textSize="@dimen/sp_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
