<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wangshen.library_login.ui.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/top_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/resetpassword_back"
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_18"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_11"
            android:layout_toEndOf="@+id/resetpassword_back"
            android:layout_toRightOf="@+id/resetpassword_back"
            android:text="@string/back"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/reset_password"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>
    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dp_50"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/phone"
        app:layout_constraintTop_toBottomOf="@id/top_rl"
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40" />
    <EditText
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/shape_register_et"
        app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
        app:layout_constraintLeft_toRightOf="@id/tv_phone"
        android:id="@+id/et_phone"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_40" />
    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dp_50"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40" />
    <EditText
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/shape_register_et"
        app:layout_constraintBottom_toBottomOf="@+id/tv_password"
        app:layout_constraintLeft_toRightOf="@id/tv_password"
        android:id="@+id/et_new_password"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_40" />
    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dp_50"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/verification"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        android:id="@+id/tv_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40" />
    <EditText
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/shape_register_et"
        app:layout_constraintBottom_toBottomOf="@+id/tv_verification_code"
        app:layout_constraintLeft_toRightOf="@id/tv_verification_code"
        android:id="@+id/et_verification_code"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40" />
    <TextView
        android:gravity="center"
        android:textColor="@color/FFFFFF"
        android:text="@string/get_verification_code"
        android:background="@drawable/shape_radius8_blue"
        android:layout_marginLeft="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@id/et_verification_code"
        app:layout_constraintLeft_toRightOf="@id/et_verification_code"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_40" />
    <TextView
        android:textColor="@color/FFFFFF"
        android:gravity="center"
        android:text="@string/reset_password"
        android:background="@drawable/shape_radius30_blue"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_40" />
</android.support.constraint.ConstraintLayout>
