<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_18"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_7"
            android:layout_marginTop="@dimen/dp_11"
            android:layout_toEndOf="@+id/register_back"
            android:layout_toRightOf="@+id/register_back"
            android:text="@string/back"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/register"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/unit_name"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/contact"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/legal_person"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/contact_phone"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/address"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/registered_capital"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/serial_number"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/unit_name"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/unit_name"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_50"
                    android:text="@string/unit_name"
                    android:textColor="@color/_000000" />

                <EditText
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@drawable/shape_register_et" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_documents" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_license" />

            <RelativeLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:background="@drawable/shape_dotted_line">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_license" />

            <RelativeLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:background="@drawable/shape_dotted_line">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_license" />

            <RelativeLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_100"
                android:layout_gravity="center"
                android:background="@drawable/shape_dotted_line">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <Button
                android:id="@+id/register_register_bt"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_44"
                android:layout_below="@+id/view4"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_42"
                android:background="@drawable/shape_register_false"
                android:text="@string/submit_audit"
                android:textColor="@color/FFFFFF"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>